--- a/index.css
+++ b/index.css
@@ -11,38 +11,53 @@ body{
     background: #080808;
     color: #fff;
 }
-#header{
+#header {
     width: 100%;
     height: 100%;
-    /* background-image: url("insert here"); */
-    /* background-size: cover;
+    /* background-image: url("/jan3d.jpg");
+    background-size: cover;
     background-position: center; */
 }
-.container{
+
+.container {
     padding: 10px 10%;
 }
 
-.nav{
+.row1 {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start; /* Align items at the start of the cross axis */
+    margin-top: 90px;
+}
+.row1 img{
+    border-radius: 20px;
+}
+
+.nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
 }
-.logo{
+
+.logo {
     width: 140px;
 }
-nav ul li{
+
+nav ul li {
     display: inline-block;
     list-style: none;
     margin: 10px 20px;
 }
-nav ul li a{
+
+nav ul li a {
     color: white;
     text-decoration: none;
     font-size: 18px;
     position: relative;
 }
-nav ul li a::after{
+
+nav ul li a::after {
     content: '';
     width: 0;
     height: 3px;
@@ -52,14 +67,18 @@ nav ul li a::after{
     bottom: -6px;
     transition: 0.5s;
 }
-nav ul li a:hover::after{
+
+nav ul li a:hover::after {
     width: 100%;
 }
-.header-text{
-    margin-top: 20%;
+
+.header-text {
+    width: calc(60% - 20px); /* Adjusted width to account for margin */
     font-size: 20px;
+    margin-right: 20px; /* Added margin to separate the text from the image */
 }
-.header-text h1{
+
+.header-text h1 {
     font-size: 50px;
     margin-top: 15px;
 }
@@ -84,6 +103,14 @@ nav ul li a:hover::after{
 }
 .about-col-2{
     flex-basis: 60%;
+}
+.about-col-2 p{
+    font-size: 15px;
+}
+.sub-title-2{
+    font-size: 40px;
+    font-weight: 600;
+    color: white; 
 }
 .sub-title{
     font-size: 60px;
@@ -122,7 +149,7 @@ nav ul li a:hover::after{
 }
 .tab-contents ul li span{
     color: #b54769;
-    font-size: 14px;
+    font-size: 22px;
 }
 .tab-contents{
     display: none;
